--- a/Gym/Gym.csproj
+++ b/Gym/Gym.csproj
@@ -174,6 +174,12 @@
     <Compile Include="FormMenu.Designer.cs">
       <DependentUpon>FormMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormRptSbscribersByAge.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRptSbscribersByAge.Designer.cs">
+      <DependentUpon>FormRptSbscribersByAge.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormRptSubscribersInCity.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -337,6 +343,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMenu.resx">
       <DependentUpon>FormMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRptSbscribersByAge.resx">
+      <DependentUpon>FormRptSbscribersByAge.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormRptSubscribersInCity.resx">
       <DependentUpon>FormRptSubscribersInCity.cs</DependentUpon>
