--- a/Gym/Gym.csproj
+++ b/Gym/Gym.csproj
@@ -174,11 +174,23 @@
     <Compile Include="FormMenu.Designer.cs">
       <DependentUpon>FormMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormRptRoomsByTool.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRptRoomsByTool.Designer.cs">
+      <DependentUpon>FormRptRoomsByTool.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormRptSbscribersByAge.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormRptSbscribersByAge.Designer.cs">
       <DependentUpon>FormRptSbscribersByAge.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormRptSubscribersByType.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRptSubscribersByType.Designer.cs">
+      <DependentUpon>FormRptSubscribersByType.cs</DependentUpon>
     </Compile>
     <Compile Include="FormRptSubscribersInCity.cs">
       <SubType>Form</SubType>
@@ -191,6 +203,12 @@
     </Compile>
     <Compile Include="FormRptToolsInRoom.Designer.cs">
       <DependentUpon>FormRptToolsInRoom.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormRptTrainingOfSubsc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRptTrainingOfSubsc.Designer.cs">
+      <DependentUpon>FormRptTrainingOfSubsc.cs</DependentUpon>
     </Compile>
     <Compile Include="FormTblSubscribers.cs">
       <SubType>Form</SubType>
@@ -344,14 +362,23 @@
     <EmbeddedResource Include="FormMenu.resx">
       <DependentUpon>FormMenu.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormRptRoomsByTool.resx">
+      <DependentUpon>FormRptRoomsByTool.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormRptSbscribersByAge.resx">
       <DependentUpon>FormRptSbscribersByAge.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRptSubscribersByType.resx">
+      <DependentUpon>FormRptSubscribersByType.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormRptSubscribersInCity.resx">
       <DependentUpon>FormRptSubscribersInCity.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormRptToolsInRoom.resx">
       <DependentUpon>FormRptToolsInRoom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRptTrainingOfSubsc.resx">
+      <DependentUpon>FormRptTrainingOfSubsc.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTblSubscribers.resx">
       <DependentUpon>FormTblSubscribers.cs</DependentUpon>
